# captcha-solver-ai

./: .gitignore  README.md  pyproject.toml
src/captcha_solver/: __init__.py  cli.py  solver.py
training/: train.py
