[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "captcha-solver-ai"
version = "0.1.1"
description = "Neural net CAPTCHA solver. MobileNetV2 + OpenCV grid splitting. CLI and Python API. Built for the hell of it."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Kaufmann", email = "vincent@kaufmann.dev" },
]
keywords = ["captcha", "recaptcha", "solver", "neural-net", "mobilenet", "opencv", "playwright", "onnx", "ai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "opencv-python-headless>=4.8.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
browser = ["playwright>=1.40.0"]

[project.scripts]
captcha-solver = "captcha_solver.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/captcha_solver"]

[project.urls]
Homepage = "https://github.com/VincentKaufmann/captcha-solver-ai"
Repository = "https://github.com/VincentKaufmann/captcha-solver-ai"
Issues = "https://github.com/VincentKaufmann/captcha-solver-ai/issues"
